--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-testify": "^0.0.13",
-    "react-toastify": "^10.0.6"
+    "stripe": "^17.4.0"
   },
   "devDependencies": {
     "eslint": "^8",
