--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.7.7",
     "mongoose": "^8.8.1",
     "next": "15.0.3",
+    "next-auth": "^4.24.11",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-testify": "^0.0.13",
