--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "mongoose": "^8.8.1",
     "next": "15.0.3",
     "next-auth": "^4.24.11",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-testify": "^0.0.13",
     "stripe": "^17.4.0"
   },
